<resources>
    <string name="app_name">Fitness App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_with_email">Login with Email</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with google</string>
    <string name="register_now">Register Now!</string>
    <string name="welcome_to_fitmeapp">Welcome to FitMeApp</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="choose_a_diet_program">Choose a diet program!</string>
    <string name="select">Select</string>
</resources>